bug 301574: Allow XML mode to be enabled explicitly by the XML constructor. r+a=brendan